# zero-trust-sre-gym

./: Dockerfile  Dockerfile.service  HF_Blog.md  README.md  dashboard.py  docker-compose.yml  frontend_service.py  generate_sft_data.py  gitignore  hr_db_service.py  inference.py  openenv.yaml  payment_service.py  pyproject.toml  requirements.txt  start.sh  test_env.py  train.py  zero_trust_sre_train.ipynb
server/: __init__.py  adversarial_designer.py  app.py  attack_executor.py  curriculum.py  environment.py  judge.py  llm_client.py  models.py  policy_engine.py
